[tool.poetry]
name = "preprocessing-unstructured-data-for-llms"
version = "0.1.0"
description = ""
authors = ["Princekrampah <jsksprince@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
unstructured = "^0.14.3"
python-pptx = "^0.6.23"
python-dotenv = "^1.0.1"
chromadb = "^0.5.0"
unstructured-client = "^0.22.0"
markdown = "^3.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
